openwebrx (1.2.61) bullseye jammy; urgency=low

  * Added Multimon-based EAS decoder by Matthew McDougal.
  * Added separate, selectable bandplans for ITU regions.
  * Added HFGCS, MARS, and CAF aviation bookmarks.
  * Sorting bands by low_band for in-order rendering.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 10 Jun 2024 16:12:00 +0000

openwebrx (1.2.60) bullseye jammy; urgency=low

  * Added optional band plan display above bookmarks.
  * Fixed reference to soapyMiri driver.
  * Switched aviation emergency frequencies to AM.
  * Added one more aviation emergency frequency.
  * Updated band names.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 3 Jun 2024 16:12:00 +0000

openwebrx (1.2.59) bullseye jammy; urgency=low

  * Added optional receiver location updates via GPSD.
  * Added copyright-free Mirics driver for SDRPlay and clones.
  * Fixed OpenWebRX startup failure if MQTT connection fails.
  * Volume control is now logarithmic, in -55db to +5db range.
  * Removing repeaters.json when receiver moves by >10km.
  * Added Aircraft Emergency Frequency bookmark.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 27 May 2024 16:12:00 +0000

openwebrx (1.2.58) bullseye jammy; urgency=low

  * Added MQTT reporting of SDR profile and status changes.
  * SDR changes reported via "openwebrx/RX" MQTT topic.
  * Decodes reported via "openwebrx/<mode>" MQTT topics.  
  * Fixed background PAGE decoding with a workaround.
  * Fixed Selector API errors when withSquelch=False.
  * Switched PAGE decoders to millisecond timestamps.
  * Switched PAGE and ISM file recording to JSON.
  * Separated FLEX baud rate from channel number.
  * Made relevant PAGE JSON fields integer.
  * Cleaned up TextParser, PAGE, and ISM decoders.
  * Added debug code to print module chains.

 -- Marat Fayzullin <luarvique@gmail.com>  Mon, 6 May 2024 16:12:00 +0000

openwebrx (1.2.57) bullseye jammy; urgency=low

  * Added user-selectable waterfall color themes.