@@ -309,6 +309,7 @@
                                 <option value="ha7ilm">Legacy</option>
                                 <option value="teejeez">Teejeez</option>
                                 <option value="zoran">Zoran</option>
+                                <option value="eclipse">Eclipse</option>
                             </select>
                         </div>
                         <div class="openwebrx-panel-line">
