@@ -2,6 +2,7 @@ openwebrx (1.2.61) bullseye jammy; urgency=low
 
   * Added Multimon-based EAS decoder by Matthew McDougal.
   * Added separate, selectable bandplans for ITU regions.
+  * Added Eclipse waterfall theme by Dimitar Milkov.
   * Added HFGCS, MARS, and CAF aviation bookmarks.
   * Sorting bands by low_band for in-order rendering.
 
